--- a/styles.scss
+++ b/styles.scss
@@ -1,32 +1,17 @@
-@import './styles/header';
-
-@import './styles/animation';
-
-@import './styles/intro';
-
-
-@import './styles/footer';
-
-
-@import './styles/base';
-@import './styles/config';
-
-@import './styles/card';
-@import './styles/nav';
-
-@import './styles/event';
-
-@import './styles/fonts';
-
-@import './styles/table';
-
-
-@import './styles/wrapper';
-@import './styles/button';
-
-@import './styles/fieldset';
-
-@import './styles/main';
-
-
+@import 'styles/animation';
+@import 'styles/base';
+@import 'styles/button';
+@import 'styles/card';
+@import 'styles/config';
+@import 'styles/event';
+@import 'styles/fieldset';
+@import 'styles/fonts';
+@import 'styles/footer';
+@import 'styles/general';
+@import 'styles/header';
+@import 'styles/intro';
+@import 'styles/main';
+@import 'styles/nav';
+@import 'styles/table';
+@import 'styles/wrapper';
 
