--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-header {
-  padding: var(--spacing) calc(var(--spacing) * 1.5);
-  width: 100%;
-  background-color: var(--color-background-secondary);
-  border-bottom: var(--border-with-background);
-  text-align: center;
-}
-
 /* Fade in animation */
 @keyframes fade-in {
   from {
@@ -24,74 +16,6 @@ html {
 header,
 .wrapper {
   animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
-}
-
-.intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: var(--spacing);
-}
-
-.intro img {
-  order: 1;
-  border-radius: var(--border-radius-image);
-}
-
-@media (min-width: 500px) {
-  .intro {
-    flex-direction: row;
-  }
-  .intro img {
-    max-width: var(--max-width-image);
-  }
-}
-footer {
-  display: grid;
-  justify-items: center;
-  padding-top: var(--spacing);
-  padding-bottom: var(--spacing);
-  border-top: 4px solid var(--color-border-with-background);
-  width: 100%;
-  background-color: var(--color-background-secondary);
-  text-align: center;
-}
-
-footer > .content {
-  display: grid;
-  justify-content: center;
-  gap: var(--vertical-space);
-}
-
-footer > section {
-  text-align: center;
-}
-
-footer ul {
-  list-style: none;
-}
-
-footer h2 {
-  margin-bottom: var(--spacing);
-}
-
-@media (min-width: 700px) {
-  footer > .content {
-    grid-template-columns: repeat(var(--columns), 1fr);
-    grid-template-rows: auto;
-    width: var(--width-offset);
-    max-width: var(--max-width);
-  }
-  footer .content > section {
-    grid-column: span 4;
-  }
-}
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-bottom: var(--spacing);
 }
 
 * {
@@ -122,53 +46,53 @@ html {
   width: 1px;
 }
 
-:root {
-  --font-size-base: 16px;
-  --font-size-headings: 1.5rem;
-  /* Grunn bilið okkar er 1rem == 16px */
-  --spacing: 1rem;
-  /* Bil á milli „stærri“ eininga (header, efnisbox, footer) */
-  --vertical-space: calc(var(--gutter) * 1);
-  --vertical-space-large: calc(var(--gutter) * 1.5);
-  /* Hámarks og lágmarks breidd á efni */
-  --max-width: 1200px;
-  --min-width-image: 200px;
-  --max-width-image: 300px;
-  --max-width-footer-section: 250px;
-  /* Border breiddir */
-  --border-width: 1px;
-  --border-radius-regular: 5px;
-  --border-radius-image: 10px;
-  --border-regular: 1px solid #000; /* todo longhand */
-  --border-with-background: 4px solid #cc99bb;
-  /* Grid stillingar */
-  --columns: 12;
-  --gutter: 30px;
-  --offset: 20px;
-  /* Breidd á efni með offset */
-  --width-offset: calc(100% - (2 * var(--offset)));
-  /* Litir */
-  /** Litir með nafni **/
-  --color-yellow: #f3dd99;
-  --color-white: #ffffff;
-  --color-black: #000000;
-  --color-purple: #eebbdd;
-  --color-purple-dark: #cc99bb;
-  /** Litir með notkun **/
-  --color-background-primary: var(--color-yellow);
-  --color-background-secondary: var(--color-purple);
-  --color-background-form: var(--color-white);
-  --color-border-with-background: var(--color-purple-dark);
-  /* Letur stillingar */
-  --font-base-size: 1rem;
-  --font-family-base: "Open Sans", Arial, Helvetica, sans-serif;
-  --font-family-heading: "Matemasie-Regular", "Comic Sans MS", cursive;
-  /* Transitions */
-  --transition-time-short: 300ms;
-  --transition-time-long: 600ms;
-  --transition-timing-function: ease-in-out;
+/** Almennt takka útlit, getur virkað á bæði <a> og <button> **/
+.button {
+  display: inline-block;
+  padding: calc(var(--spacing) * 0.5) var(--spacing);
+  border: var(--border-regular);
+  border-radius: var(--border-radius-regular);
+  border-width: var(--border-width);
+  color: var(--color-black);
+  background-color: var(--color-background-secondary);
+  font-size: 1rem;
+  text-decoration: none;
+  transition: background-color var(--transition-time-short) var(--transition-timing-function), color var(--transition-time-short) var(--transition-timing-function), border-color var(--transition-time-short) var(--transition-timing-function);
 }
 
+.button:hover {
+  color: var(--color-background-secondary);
+  background-color: var(--color-black);
+  border-color: var(--color-background-secondary);
+}
+
+.cards {
+  display: grid;
+  grid-template-rows: auto;
+  gap: var(--vertical-space);
+  justify-items: center;
+  width: 100%;
+}
+
+.cards > .title {
+  width: 100%;
+  text-align: center;
+}
+
+.cards > .content {
+  display: grid;
+  grid-template-rows: auto;
+  gap: var(--vertical-space);
+  justify-items: center;
+  width: 100%;
+}
+
+@media (min-width: 700px) {
+  .cards > .content {
+    grid-template-columns: repeat(calc(var(--columns) - 2), 1fr);
+    grid-template-rows: auto;
+  }
+}
 /** Card **/
 .card {
   display: flex;
@@ -232,28 +156,53 @@ html {
   margin-top: var(--spacing);
 }
 
-nav {
-  width: 100%;
+:root {
+  --font-size-base: 16px;
+  --font-size-headings: 1.5rem;
+  /* Grunn bilið okkar er 1rem == 16px */
+  --spacing: 1rem;
+  /* Bil á milli „stærri“ eininga (header, efnisbox, footer) */
+  --vertical-space: calc(var(--gutter) * 1);
+  --vertical-space-large: calc(var(--gutter) * 1.5);
+  /* Hámarks og lágmarks breidd á efni */
+  --max-width: 1200px;
+  --min-width-image: 200px;
+  --max-width-image: 300px;
+  --max-width-footer-section: 250px;
+  /* Border breiddir */
+  --border-width: 1px;
+  --border-radius-regular: 5px;
+  --border-radius-image: 10px;
+  --border-regular: 1px solid #000; /* todo longhand */
+  --border-with-background: 4px solid #cc99bb;
+  /* Grid stillingar */
+  --columns: 12;
+  --gutter: 30px;
+  --offset: 20px;
+  /* Breidd á efni með offset */
+  --width-offset: calc(100% - (2 * var(--offset)));
+  /* Litir */
+  /** Litir með nafni **/
+  --color-yellow: #f3dd99;
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-purple: #eebbdd;
+  --color-purple-dark: #cc99bb;
+  /** Litir með notkun **/
+  --color-background-primary: var(--color-yellow);
+  --color-background-secondary: var(--color-purple);
+  --color-background-form: var(--color-white);
+  --color-border-with-background: var(--color-purple-dark);
+  /* Letur stillingar */
+  --font-base-size: 1rem;
+  --font-family-base: "Open Sans", Arial, Helvetica, sans-serif;
+  --font-family-heading: "Matemasie-Regular", "Comic Sans MS", cursive;
+  /* Transitions */
+  --transition-time-short: 300ms;
+  --transition-time-long: 600ms;
+  --transition-timing-function: ease-in-out;
 }
 
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: var(--spacing);
-  list-style: none;
-}
-
-nav ul li {
-  margin-bottom: calc(var(--spacing) / 2);
-  text-align: left;
-}
-
-@media (min-width: 800px) {
-  nav ul {
-    display: block;
-  }
-}
 .event {
   clear: left;
   width: 100%;
@@ -276,6 +225,30 @@ nav ul li {
 
 .event .register {
   clear: both;
+}
+
+fieldset {
+  border: 0;
+}
+
+fieldset legend {
+  margin-bottom: var(--spacing);
+  font-size: var(--font-size-headings);
+}
+
+fieldset input,
+fieldset select,
+fieldset textarea {
+  padding: calc(var(--spacing) * 0.5);
+  width: 100%;
+  border: var(--border-regular);
+  background-color: var(--color-background-form);
+}
+
+fieldset input[type=checkbox] {
+  display: inline-block;
+  margin-right: calc(var(--spacing) * 0.5);
+  width: auto;
 }
 
 html {
@@ -301,6 +274,148 @@ html {
   font-family: "Open Sans";
   font-weight: 700;
   src: url("./fonts/OpenSans-VariableFont_wdth,wght.ttf") format("woff2");
+}
+footer {
+  display: grid;
+  justify-items: center;
+  padding-top: var(--spacing);
+  padding-bottom: var(--spacing);
+  border-top: 4px solid var(--color-border-with-background);
+  width: 100%;
+  background-color: var(--color-background-secondary);
+  text-align: center;
+}
+
+footer > .content {
+  display: grid;
+  justify-content: center;
+  gap: var(--vertical-space);
+}
+
+footer > section {
+  text-align: center;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer h2 {
+  margin-bottom: var(--spacing);
+}
+
+@media (min-width: 700px) {
+  footer > .content {
+    grid-template-columns: repeat(var(--columns), 1fr);
+    grid-template-rows: auto;
+    width: var(--width-offset);
+    max-width: var(--max-width);
+  }
+  footer .content > section {
+    grid-column: span 4;
+  }
+}
+dt {
+  font-weight: bold;
+}
+
+dd {
+  margin-bottom: var(--spacing);
+}
+
+html,
+input,
+select,
+button {
+  font-family: var(--font-family-base);
+}
+
+/*** Allar fyrirsagnir nota Matemasie regular ***/
+h1,
+h2,
+h3,
+legend {
+  font-family: var(--font-family-heading);
+}
+
+/** Lætur myndir aldrei taka meira pláss en foreldri skilgreinir **/
+img {
+  max-width: 100%;
+}
+
+/** Litur á hlekkjum erfist frá foreldri **/
+a {
+  color: inherit;
+}
+
+/** „Til baka á forsíðu“ hlekkur **/
+.back {
+  margin-top: var(--spacing);
+}
+
+header {
+  padding: var(--spacing) calc(var(--spacing) * 1.5);
+  width: 100%;
+  background-color: var(--color-background-secondary);
+  border-bottom: var(--border-with-background);
+  text-align: center;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: var(--spacing);
+}
+
+.intro img {
+  order: 1;
+  border-radius: var(--border-radius-image);
+}
+
+@media (min-width: 500px) {
+  .intro {
+    flex-direction: row;
+  }
+  .intro img {
+    max-width: var(--max-width-image);
+  }
+}
+main {
+  width: 100%;
+}
+
+/**
+ * notum þetta til að fá bil á milli eininga _almennt_
+ * en ekki að hver eining þurfi að huga að bili
+ */
+main > .content {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--spacing) * 2);
+}
+
+nav {
+  width: 100%;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: var(--spacing);
+  list-style: none;
+}
+
+nav ul li {
+  margin-bottom: calc(var(--spacing) / 2);
+  text-align: left;
+}
+
+@media (min-width: 800px) {
+  nav ul {
+    display: block;
+  }
 }
 .table-wrapper {
   overflow-x: auto;
@@ -382,63 +497,6 @@ table td:last-child {
   .wrapper .wrapper-main {
     grid-column: span 10;
   }
-}
-/** Almennt takka útlit, getur virkað á bæði <a> og <button> **/
-.button {
-  display: inline-block;
-  padding: calc(var(--spacing) * 0.5) var(--spacing);
-  border: var(--border-regular);
-  border-radius: var(--border-radius-regular);
-  border-width: var(--border-width);
-  color: var(--color-black);
-  background-color: var(--color-background-secondary);
-  font-size: 1rem;
-  text-decoration: none;
-  transition: background-color var(--transition-time-short) var(--transition-timing-function), color var(--transition-time-short) var(--transition-timing-function), border-color var(--transition-time-short) var(--transition-timing-function);
-}
-
-.button:hover {
-  color: var(--color-background-secondary);
-  background-color: var(--color-black);
-  border-color: var(--color-background-secondary);
-}
-
-fieldset {
-  border: 0;
-}
-
-fieldset legend {
-  margin-bottom: var(--spacing);
-  font-size: var(--font-size-headings);
-}
-
-fieldset input,
-fieldset select,
-fieldset textarea {
-  padding: calc(var(--spacing) * 0.5);
-  width: 100%;
-  border: var(--border-regular);
-  background-color: var(--color-background-form);
-}
-
-fieldset input[type=checkbox] {
-  display: inline-block;
-  margin-right: calc(var(--spacing) * 0.5);
-  width: auto;
-}
-
-main {
-  width: 100%;
-}
-
-/**
- * notum þetta til að fá bil á milli eininga _almennt_
- * en ekki að hver eining þurfi að huga að bili
- */
-main > .content {
-  display: flex;
-  flex-direction: column;
-  gap: calc(var(--spacing) * 2);
 }
 
 /*# sourceMappingURL=styles.css.map */
